// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageDelegates has the expected html structure 1`] = `
<div
  class="ni-page"
>
  <header
    class="ni-page-header"
  >
    <div
      class="ni-page-header-container"
    >
      <div
        class="ni-page-header-text"
      >
        <div
          class="ni-page-header-title"
        >
          <div>
            Delegates
          </div>
        </div>
        <div
          class="ni-page-header-subtitle"
        >
          <div>
            
          </div>
        </div>
      </div>
      <menu
        class="ni-page-header-menu"
      >
        <div>
          <div>
            <div
              class="ni-tool-bar"
            >
              <div
                class="ni-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a>
                    <i
                      class="material-icons"
                    >
                      search
                    </i>
                    <div
                      class="label"
                    >
                      Search
                    </div>
                  </a>
                  <a>
                    <i
                      class="material-icons"
                    >
                      refresh
                    </i>
                    <div
                      class="label"
                    >
                      Refresh
                    </div>
                  </a>
                  <a
                    class=""
                    href="#/staking/bond"
                  >
                    <i
                      class="material-icons"
                    >
                      check_circle
                    </i>
                    <div
                      class="label"
                    >
                      Bond Atoms
                    </div>
                  </a>
                </div>
                <a
                  class="help"
                >
                  <i
                    class="material-icons"
                  >
                    help_outline
                  </i>
                </a>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="ni-page-main"
  >
    <!---->
    <div
      class="panel-sort"
    >
      <div
        class="panel-sort-container"
      >
        <div
          class="sort-by"
        >
          <div
            class="label"
          >
            Name
          </div>
        </div>
        <div
          class="sort-by"
        >
          <div
            class="label"
          >
            Public Key
          </div>
        </div>
        <div
          class="sort-by active asc"
        >
          <div
            class="label"
          >
            Voting Power
          </div>
        </div>
        <div
          class="sort-by"
        >
          <div
            class="label"
          >
            Bonded Atoms
          </div>
        </div>
        <div
          class="sort-by"
        >
          <div
            class="label"
          >
            Bonded by You
          </div>
        </div>
      </div>
    </div>
    <div
      class="li-delegate ts-li-delegate-enter ts-li-delegate-enter-active"
    >
      <div
        class="li-delegate__values"
      >
        <div
          class="ni-delegate__value"
        />
        <div
          class="li-delegate__value name"
        >
          <span>
            <i
              class="fa fa-square-o"
            />
            <a
              class=""
              href="#/staking/delegates/pubkeyY"
            >
               candidateY
            </a>
          </span>
        </div>
        <div
          class="li-delegate__value id"
        >
          <span>
            pubkeyY
          </span>
        </div>
        <div
          class="li-delegate__value delegated"
        >
          <span>
            0%
          </span>
        </div>
        <div
          class="li-delegate__value voting_power num bar"
        >
          <span>
            30,000
          </span>
          <div
            class="bar"
            style="width: 100%;"
          />
        </div>
        <div
          class="li-delegate__value"
        >
          <span>
            0
          </span>
        </div>
      </div>
    </div>
    <div
      class="li-delegate ts-li-delegate-enter ts-li-delegate-enter-active"
    >
      <div
        class="li-delegate__values"
      >
        <div
          class="ni-delegate__value"
        />
        <div
          class="li-delegate__value name"
        >
          <span>
            <i
              class="fa fa-square-o"
            />
            <a
              class=""
              href="#/staking/delegates/pubkeyX"
            >
               candidateX
            </a>
          </span>
        </div>
        <div
          class="li-delegate__value id"
        >
          <span>
            pubkeyX
          </span>
        </div>
        <div
          class="li-delegate__value delegated"
        >
          <span>
            0%
          </span>
        </div>
        <div
          class="li-delegate__value voting_power num bar"
        >
          <span>
            10,000
          </span>
          <div
            class="bar"
            style="width: 33%;"
          />
        </div>
        <div
          class="li-delegate__value"
        >
          <span>
            0
          </span>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`PageDelegates should filter the delegates 1`] = `
<div
  class="ni-page"
>
  <header
    class="ni-page-header"
  >
    <div
      class="ni-page-header-container"
    >
      <div
        class="ni-page-header-text"
      >
        <div
          class="ni-page-header-title"
        >
          <div>
            Delegates
          </div>
        </div>
        <div
          class="ni-page-header-subtitle"
        >
          <div>
            
          </div>
        </div>
      </div>
      <menu
        class="ni-page-header-menu"
      >
        <div>
          <div>
            <div
              class="ni-tool-bar"
            >
              <div
                class="ni-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a>
                    <i
                      class="material-icons"
                    >
                      search
                    </i>
                    <div
                      class="label"
                    >
                      Search
                    </div>
                  </a>
                  <a>
                    <i
                      class="material-icons"
                    >
                      refresh
                    </i>
                    <div
                      class="label"
                    >
                      Refresh
                    </div>
                  </a>
                  <a
                    class=""
                    href="#/staking/bond"
                  >
                    <i
                      class="material-icons"
                    >
                      check_circle
                    </i>
                    <div
                      class="label"
                    >
                      Bond Atoms
                    </div>
                  </a>
                </div>
                <a
                  class="help"
                >
                  <i
                    class="material-icons"
                  >
                    help_outline
                  </i>
                </a>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="ni-page-main"
  >
    <div
      class="ni-modal-search"
    >
      <div
        class="ni-modal-search-container"
      >
        <input
          class="mousetrap ni-field"
          placeholder="Search..."
          type="text"
        />
        <button
          class="ni-btn"
        >
          <span
            class="ni-btn-container"
          >
            <i
              aria-hidden="true"
              class="ni-btn-icon material-icons"
            >
              close
            </i>
            <!---->
          </span>
        </button>
      </div>
    </div>
    <div
      class="panel-sort"
    >
      <div
        class="panel-sort-container"
      >
        <div
          class="sort-by"
        >
          <div
            class="label"
          >
            Name
          </div>
        </div>
        <div
          class="sort-by"
        >
          <div
            class="label"
          >
            Public Key
          </div>
        </div>
        <div
          class="sort-by active asc"
        >
          <div
            class="label"
          >
            Voting Power
          </div>
        </div>
        <div
          class="sort-by"
        >
          <div
            class="label"
          >
            Bonded Atoms
          </div>
        </div>
        <div
          class="sort-by"
        >
          <div
            class="label"
          >
            Bonded by You
          </div>
        </div>
      </div>
    </div>
    <div
      class="li-delegate"
    >
      <div
        class="li-delegate__values"
      >
        <div
          class="ni-delegate__value"
        />
        <div
          class="li-delegate__value name"
        >
          <span>
            <i
              class="fa fa-square-o"
            />
            <a
              class=""
              href="#/staking/delegates/pubkeyY"
            >
               candidateY
            </a>
          </span>
        </div>
        <div
          class="li-delegate__value id"
        >
          <span>
            pubkeyY
          </span>
        </div>
        <div
          class="li-delegate__value delegated"
        >
          <span>
            0%
          </span>
        </div>
        <div
          class="li-delegate__value voting_power num bar"
        >
          <span>
            30,000
          </span>
          <div
            class="bar"
            style="width: 100%;"
          />
        </div>
        <div
          class="li-delegate__value"
        >
          <span>
            0
          </span>
        </div>
      </div>
    </div>
    <div
      class="li-delegate"
    >
      <div
        class="li-delegate__values"
      >
        <div
          class="ni-delegate__value"
        />
        <div
          class="li-delegate__value name"
        >
          <span>
            <i
              class="fa fa-square-o"
            />
            <a
              class=""
              href="#/staking/delegates/pubkeyX"
            >
               candidateX
            </a>
          </span>
        </div>
        <div
          class="li-delegate__value id"
        >
          <span>
            pubkeyX
          </span>
        </div>
        <div
          class="li-delegate__value delegated"
        >
          <span>
            0%
          </span>
        </div>
        <div
          class="li-delegate__value voting_power num bar"
        >
          <span>
            10,000
          </span>
          <div
            class="bar"
            style="width: 33%;"
          />
        </div>
        <div
          class="li-delegate__value"
        >
          <span>
            0
          </span>
        </div>
      </div>
    </div>
  </main>
</div>
`;
